# splits-oddsfeed

./: .env.bak  .env.bak.1754800610  .env.bak.1754843751  .env.bak.1754856898  .env.bak.1754859642  .env.bak.1754917929  .env.bak.1754937348  .env.bak.1755007718  .env.bak.1755051847  .env.bak.1755091028  .env.bak.1755108122  .env.bak.1755115102  .env.bak.1755146534  .env.bak.1755177408  .env.bak.1755201494  .env.bak.1755226382  .env.bak.1755300454  .env.bak.1755301331  .env.bak.1755303040  .env.example  .env.tmp  .gitignore  .pre-commit-config.yaml  Dockerfile.permcheck  Makefile  Makefile.bak  README.md  collector_container_id.txt  docker-compose.override.yml  docker-compose.yml  docker-compose.yml.backup  docker-compose.yml.bak  docker-compose.yml.bak.1754765227  docker-compose.yml.broken
.github/workflows/: ci.yml  collector-kambi-browser.yml  collector-kambi.yml  collector-kambi.yml.bak  collector-pinnacle.yml  docker.yml  docker.yml.bak  ghcr-perm-check.yml  kambi-latency-soak.yml  kambi-parity.yml
api/: Dockerfile  pyproject.toml
api/src/api/: main.py  metrics.py
artifacts/: betrivers_nfl_network_report.md  kambi_bootstrap.json  kambi_proxy_probe.json  kambi_real_sample.json  kambi_test.json  odds_sample.json  probe_proxies.py
collector-agg/: Dockerfile  pyproject.toml
collector-agg/src/collector_agg/: main.py
collector-agg/tests/: test_collector_agg.py
collector-b365/: Dockerfile  pyproject.toml
collector-b365/src/collector_b365/: main.py
collector-dk/: Dockerfile  pyproject.toml
collector-dk/src/collector_dk/: main.py
collector-fd/: Dockerfile  pyproject.toml
collector-fd/src/collector_fd/: main.py
collector-kambi/: .ci-touch  .dockerignore  .trigger  Dockerfile  README.md  pyproject.toml
collector-kambi-browser/: .ci-touch.txt  .dockerignore  Dockerfile  pyproject.toml
collector-kambi-browser/src/collector_kambi_browser/: bootstrap.py  fanout.py  main.py  publisher.py
collector-kambi/src/collector_kambi/: __init__.py  bootstrap.py  main.py
collector-mgm/: Dockerfile  pyproject.toml
collector-mgm/src/collector_mgm/: main.py
collector-pinnacle/: .dockerignore  Dockerfile  README.md  pyproject.toml
collector-pinnacle/src/collector_pinnacle/: __init__.py  main.py  metrics.py  mock.py  pinn.py
collector-pinnacle/tests/: test_collector_pinnacle.py
collector-stake/: Dockerfile  pyproject.toml
collector-stake/src/collector_stake/: main.py
grafana/provisioning/alerting/: README.md  contact-points.example.yml  kambi-freshness.yml  kambi-latency-alerts.yml  notification-policies.yml  oddsfeed-alerts.yml
grafana/provisioning/dashboards/: kambi-latency.json  oddsfeed-aggregator.json  oddsfeed-aggregator.json.bak  oddsfeed-overview.json
migrations/: 002_odds_policies.sql  003_odds_dedupe.sql  init.sql
normalizer/: Dockerfile  pyproject.toml
normalizer/src/normalizer/: kambi_mapper.py  main.py  main.py.bak  pinnacle_mapper.py
normalizer/tools/: kambi_replay.py
odds_core/: events.py  schemas.py
odds_core/utils/: logging.py
prometheus/: prometheus.yml  prometheus.yml.bak.1754928312
proxy-manager/: .gitignore  Dockerfile  README.md  proxies.json.example  pyproject.toml
proxy-manager/src/proxy_manager/: main.py
state/kambi-browser/: state.json
tests/: test_smoke.py
tools/: kambi_bootstrap.py  network_scout.py  network_scout.py.bak  peek_kambi_envelopes.py  pyproject.toml
tools/artifacts/: co_betrivers_com_nfl_network_report.md  pa_betrivers_com_nfl_network_report.md
