[tool.poetry]
name = "collector-pinnacle"
version = "0.1.0"
description = "Pinnacle Sports odds collector for splits-oddsfeed"
authors = ["sam"]
readme = "README.md"
packages = [{ include = "collector_pinnacle", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = "^0.27.0"}
pydantic = "^2.0.0"
prometheus-client = "^0.20.0"
tenacity = "^8.0.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
