[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Network reconnaissance tools"
authors = ["tools <tools@oddsfeed.com>"]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.54.0"
playwright-stealth = "^1.0.6"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
